Add page with informations about posts authors

--- a/i18n/en.yaml
+++ b/i18n/en.yaml
@@ -34,3 +34,17 @@
   translation: View All Post
 - id: share
   translation: Share
+- id: aboutAuthor
+  translation: About author
+- id: contact
+  translation: Contact
+- id: authorsPosts
+  translation: Author's posts
+- id: authorsOfPosts
+  translation: Authors of posts
+- id: authorOfPostsOnBlog
+  translation: Author of posts on the blog
+- id: authorsOfPostsOnBlog
+  translation: Authors of posts on the blog
+- id: blogs
+  translation: Blogs
