modified readme file and footer link

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -11,4 +11,4 @@
 - id: authorsPosts
   translation: Author's posts
 - id: copyright
-  translation: copyright &copy; 2019 [themefisher](https://themefisher.com) all right reserved
+  translation: copyright &copy; 2019 [gethugothemes](https://gethugothemes.com) all right reserved
