--- a/exampleSite/i18n/fr.yaml
+++ b/exampleSite/i18n/fr.yaml
@@ -11,4 +11,4 @@
 - id: authorsPosts
   translation: Articles de l'auteur
 - id: copyright
-  translation: copyright et copie; 2019 [themefisher] (https://themefisher.com) tous droits réservés
+  translation: copyright et copie; 2019 [gethugothemes] (https://gethugothemes.com) tous droits réservés
