--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -15,4 +15,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation: copyright &copy; 2019 [gethugothemes](https://gethugothemes.com) all right reserved
+  translation: copyright &copy; 2019 [Paisley-Digital](https://paisley-digital.netlifly.com) all right reserved
