Blog title changed to Products

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -4,7 +4,7 @@
 - id: readMore
   translation: Read more
 - id: viewAllPost
-  translation: View All Post
+  translation: View All Solutions
 - id: share
   translation: Share
 - id: aboutAuthor
