Blog title changed to Products

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -1,6 +1,6 @@
 ---
 - id: blogTitle
-  translation: Products
+  translation: Our Solutions
 - id: readMore
   translation: Read more
 - id: viewAllPost
