--- a/exampleSite/i18n/fr.yaml
+++ b/exampleSite/i18n/fr.yaml
@@ -10,8 +10,6 @@
   translation: À propos de l'auteur
 - id: authorsPosts
   translation: Articles de l'auteur
-- id: submit
-  translation: Soumettre
 - id: all
   translation: All
 - id: about
@@ -28,3 +26,5 @@
   translation: Blog
 - id: contact
   translation: Contact
+- id: themefisher
+  translation: Themefisher
