Add first post Modify config file Add author page Remove unused file (fr language) Change label our solution to blog and latest blog

--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -1,10 +1,10 @@
 ---
 - id: blogTitle
-  translation: Our Solutions
+  translation: Latest Post
 - id: readMore
   translation: Read more
 - id: viewAllPost
-  translation: View All Solutions
+  translation: View All Posts
 - id: share
   translation: Share
 - id: aboutAuthor
