--- a/exampleSite/i18n/en.yaml
+++ b/exampleSite/i18n/en.yaml
@@ -16,5 +16,5 @@
 - id: all
   translation: All
 - id: copyright
-  translation: copyright &copy; 2020 [**Paisley Digital**](https://paisley.digital/)
-    all right reserved
+  translation:  Copyright &copy; 2019-2021 [**Paisley Digital**](https://paisley.digital/)
+  - All Right Reserved
