--- a/codes/asy_assignment.Rmd
+++ b/codes/asy_assignment.Rmd
@@ -30,7 +30,7 @@ knitr::opts_chunk$set(echo = TRUE, warning = FALSE, message = TRUE)
 ## 3.1 Installing and launching R packages
 
 ```{r, message = FALSE}
-packages <- c('tidyverse','ggstatsplot','plotly','readr','leaflet','haven','funModeling','crosstalk','RColorBrewer','data.table','shiny')
+packages <- c('tidyverse','ggstatsplot','plotly','readr','haven','funModeling','crosstalk','data.table','shiny', 'shinyWidgets')
 
 for (p in packages){
   if (!require(p,character.only=T)){
@@ -50,67 +50,8 @@ The data was imported using the `read_csv()` of the readr package.
 
 ```{r}
 # Read the csv file as a tbl_df
-listings <- read_csv("./data/clean/listing_en.csv")
+final_listings <- read_csv("./data/listing_prep.csv")
 
-```
-
-Now we take alook at the merged dataset
-```{r}
-glimpse(listings)
-```
-
-Here we see that there are 4,255 listings and 74 columns. Some columns are not useful
-
-### 3.2.3 Data cleaning
-
-**Missing data**
-Use `status` to check for missing data, zeros, data type of the data frame.
-
-```{r}
-listings_status <- status(listings)
-arrange(listings_status, -p_na) %>%
-  select(variable, q_na, p_na)
-```
-
-**Notes**
-- q_zeros: quantity of zeros  
-- p_zeros: percentage of zeros  
-- q_na: quantity of NA  
-- p_na: percentage of NA  
-- type: data type, factor or numeric  
-- unique: quantity of unique values, useful for categorical data  
-
-Observations with missing `review_scores_rating` values were removed due to this being the target variable.
-
-```{r}
-
-
-```
-
-**Exclude unwanted variables**
-
-We want to exclude  
-
-(1) redundant variables that will not be used for the analysis so that users will not be overwhelmed by the number of variables when performing selection,  
-
-(2) variables with high percentage of missing values as they will skew the observation.
-
-```{r}
-listings <- listings %>%
-  select(-c(listing_id, host_name, description, listing_url, scrape_id, last_scraped, name, picture_url,host_id, host_url,  host_location, host_about,host_thumbnail_url, host_picture_url, host_listings_count, host_neighbourhood, neighbourhood, neighborhood_overview, bathrooms, host_verifications,calendar_updated,calendar_last_scraped, first_review,last_review,license, description_lang, amenities, latitude, longitude))
-```
-
-**Change variable type**
-
-Examine the classes of each of the columns to make sure they are correctly specified.
-
-We observed that `price`, `host_response_rate` and `host_acceptance_rate` are in `chr` type, however they should be in `dbl` or `int` type.
-
-```{r}
-final_listings <- listings %>%
-  mutate(price, price = as.numeric(gsub('\\$|',"", listings$price))) %>%  
-  mutate(host_response_rate, host_response_rate = as.numeric(gsub('\\%|',"", listings$host_response_rate))) %>%
-  mutate(host_acceptance_rate, host_acceptance_rate = as.numeric(gsub('\\%|',"", listings$host_acceptance_rate)))
 ```
 
 ## 3.3 Data visualisation
@@ -123,23 +64,25 @@ final_listings <- listings %>%
 - Data table of selected variables
 
 ```{r}
-bscols(widths = c(3,9),
-       list(
-         checkboxGroupInput('selected_v', 
-                            'Select variables for observation', 
-                            choices = names(final_listings), 
-                            selected = c('price', 'host_is_superhost','review_scores_rating'))
-       ),
-       renderPrint({
-         selectedData <- final_listings[, input$selected_v, drop = FALSE]
-         summary(selectedData)
-         }),
-       
-       DT::renderDataTable({
-         selectedData <- final_listings[, input$selected_v, drop = FALSE]
-         DT::datatable(selectedData)
-         })
-       )
+pickerInput('selected_v', 
+           'Select variables for observation', 
+           choices = names(final_listings),
+           options = list(`actions-box` = TRUE,
+                          size = 10,
+                          `selected-text-format` = "count > 3"),
+           multiple = TRUE)
+
+
+renderPrint({
+  selectedData <- final_listings[, input$selected_v, drop = FALSE]
+  summary(selectedData)
+})
+
+DT::renderDataTable({
+  selectedData <- final_listings[, input$selected_v, drop = FALSE]
+  DT::datatable(selectedData)
+  })
+
 ```
 
 ### 3.3.2 Exploratory Data Analysis
@@ -151,13 +94,12 @@ bscols(widths = c(3,9),
        list(
          selectInput(inputId = 'x_var',
                      label = 'Select x-variable',
-                     choices = colnames(final_listings)), #why is my date showing as number???
-         
-         "Selected variable's data type:",
+                     choices = colnames(final_listings),
+                     selected = 'review_scores_rating'), #why is my date showing as number???
          
          renderText({
           x <- unlist(final_listings[,input$x_var])
-          class(x)
+          paste("Selected variable's data type: ", class(x))
           }),
          
          checkboxInput(inputId = 'show_stats', 
@@ -182,7 +124,7 @@ bscols(widths = c(3,9),
         renderPlotly({
          x <- unlist(final_listings[,input$x_var])
          
-         if(class(x) == class(final_listings$price)) {
+         if(class(x) == class(final_listings$review_scores_rating)) {
            plot_ly(type = 'box') %>%
            add_boxplot(x = x, name = input$x_var, boxpoints = "outliers") %>%
            layout(title = paste("Outlier boxplot of ", input$x_var),
@@ -194,47 +136,52 @@ bscols(widths = c(3,9),
        ))
 ```
 
-----------------------
-WIP
------------
 
 Bivariate analysis
 
 ```{r}
 bscols(widths = c(3,9),
        list(
-         selectInput(inputId = 'x_var',
+         renderText({
+          x_bi <- unlist(final_listings[,input$x_bi_var])
+          paste("x-variable: ", class(x_bi))
+          }),
+         
+         selectInput(inputId = 'x_bi_var',
             label = 'Select x-variable',
-            choices = colnames(final_listings)),
-         
-         "Class type of x variable:",
+            choices = colnames(final_listings),
+            selected = 'neighbourhood_cleansed'),
          
          renderText({
-          x <- unlist(final_listings[,input$x_var])
-          class(x)
+          y_bi <- unlist(final_listings[,input$y_bi_var])
+          paste("Y variable - ", class(y_bi))
           }),
          
-         selectInput(inputId = 'y_var',
+         selectInput(inputId = 'y_bi_var',
             label = 'Select y-variable',
-            choices = colnames(final_listings)),
-         
-        "Class type of y variable is  ",
-         
-         renderText({
-          x <- unlist(final_listings[,input$y_var])
-          class(y)
-          }),
-         
+            choices = colnames(final_listings),
+            selected = 'price_per_pax'),
+
          selectInput(inputId = 'chart',
                      label = "Select chart type",
-                     choices = c("bar", "scatter", 'boxplot', 'mosaic'))
+                     choices = c("bar", "scatter", 'box'),
+                     selected = 'box'),
+         
+         selectInput(inputId = 'colour',
+                     label = 'Colour chart by:',
+                     choices = colnames(final_listings),
+                     selected = 'neighbourhood_group_cleansed')
        ),
        renderPlotly({
-         x <- unlist(final_listings[,input$x_var])
-         y <- unlist(final_listings[,input$y_var])
-         chart <- unlist(final_listings[,input$chart])
-         plot_ly(x = x, y = y,
-               type = 'scatter')
+         x_bi <- unlist(final_listings[,input$x_bi_var])
+         y_bi <- unlist(final_listings[,input$y_bi_var])
+         c_bi <- unlist(final_listings[,input$colour])
+         
+         plot_ly(x = x_bi, y = y_bi, color = c_bi,
+                 type = input$chart) %>%
+                layout(title = paste(input$x_bi_var, 'vs', input$y_bi_var),
+                       xaxis = list(title = input$x_bi_var),
+                       yaxis = list(title= input$y_bi_var))
          
        })
        
@@ -244,8 +191,15 @@ bscols(widths = c(3,9),
 
 
 ### 3.3.3 Confirmatory Data Analysis
+```{r}
+plot_ly(x = final_listings$neighbourhood_cleansed, 
+       y = final_listings$price_per_pax, 
+       color = final_listings$neighbourhood_group_cleansed,
+       type = 'box') %>%
+layout(title = "", 
+       xaxis = list(title = "x-var",
+                    categoryorder = "price_per_pax",
+                    categoryarray = "price_per_pax"),
+       yaxis = list(title= "y-var"))
 
-
-
-
-
+```
