--- a/paisley/i18n/en.yaml
+++ b/paisley/i18n/en.yaml
@@ -16,5 +16,4 @@
 - id: all
   translation: All
 - id: copyright
-  translation:  Copyright &copy; 2019-2021 [**Paisley Digital**](https://paisley.digital/)
-  - All Right Reserved
+  translation:  Copyright &copy; 2019-2021 [**Paisley Digital**](https://paisley.digital/) All Right Reserved.
